--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>sda.tarr6</groupId>
     <artifactId>pizzeria2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.7.RELEASE</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
